# scheduler-helper

./: install.bat  pyproject.toml  run_analysis_gui.bat  run_analysis_gui.sh
.claude/: settings.json
examples/: cov_covgen.tsv  cov_eci.tsv  cov_tnw.tsv  globe_example.py  satcat_v1.csv  satcat_v2.csv
src/tasking_helper/: __main__.py  cli.py  make_covariance.py  make_satcat.py
src/tasking_helper/coverage/: __init__.py  _gap_ext.c  setup_ext.py
src/tasking_helper/gui/: __init__.py  analysis_gui.py
src/tasking_helper/utils/: __init__.py  jdate.py  nasa_sem.py  satellite.py  tle.py  utils.py
src/tasking_helper/viz/: __init__.py  globe.py
tests/: test_coverage_gap.py  test_jdate.py  test_propagation_comparison.py  test_satellite.py  test_tle.py  test_utils.py
